overlay close button should be fixed as well

--- a/angular-markdown-textarea.styl
+++ b/angular-markdown-textarea.styl
@@ -3,7 +3,6 @@ button()
   background: none
   font-size: 24px
   color: silver
-  position: absolute
   top: 6px
   right: 6px
 
@@ -16,6 +15,7 @@ button()
     position: relative
 
     > button 
+      position: absolute
       button()
 
   .overlay
@@ -24,7 +24,9 @@ button()
     right: 0
     bottom: 0
     left: 0
+    z-index: 1
 
     > button
       button()
+      position: fixed
       z-index: 1
