--- a/angular-markdown-textarea.css
+++ b/angular-markdown-textarea.css
@@ -2,11 +2,11 @@
   position: relative;
 }
 .markdown-textarea .textarea-container > button {
+  position: absolute;
   border: none 0;
   background: none;
   font-size: 24px;
   color: #c0c0c0;
-  position: absolute;
   top: 6px;
   right: 6px;
 }
@@ -19,15 +19,16 @@
   right: 0;
   bottom: 0;
   left: 0;
+  z-index: 1;
 }
 .markdown-textarea .overlay > button {
   border: none 0;
   background: none;
   font-size: 24px;
   color: #c0c0c0;
-  position: absolute;
   top: 6px;
   right: 6px;
+  position: fixed;
   z-index: 1;
 }
 .markdown-textarea .overlay > button:hover {
